KEP-572: Implement VolumeClaimPolicies API for Stateful JobSet
